--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
   <div class="container">
-    <h2 class="mt-5 mb-4">Veep</h2>
+    
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -134,7 +134,8 @@
     </div>
   </div>
 </div> <!-- end of video modal> -->
-   
+  
+  <div class="row"><div class="col"><h2 class="mt-5 mb-4">Veep</h2></div></div>
     <div class="row">
        <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid rounded shadow" src="media/images/VEEPS4E1.jpg" ><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
@@ -146,6 +147,19 @@
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>  
     </div>
   </div>
+  
+  <div class="row"><div class="col"><h2 class="mt-5 mb-4">Veep</h2></div></div>
+    <div class="row">
+       <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid rounded shadow" src="media/images/VEEPS4E1.jpg" ><div class="overlay">
+       <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
+       <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E2.jpg"><div class="overlay">
+       <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
+       <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E4b.jpg"><div class="overlay">
+       <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
+       <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E6.jpg"><div class="overlay">
+       <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>  
+    </div>
+
 </main>
 
 <footer class="footer mt-auto py-3">
