--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </button>
   <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
     <div class="navbar-nav justify-content-center align-items-center">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="#">Features</a>
       <a class="nav-item nav-link" href="#">Pricing</a>
     </div>
@@ -135,7 +135,7 @@
   </div>
 </div> <!-- end of video modal> -->
   
-  <div class="row"><div class="col"><h2 class="mt-5 mb-4">Veep</h2></div></div>
+    <div class="row"><div class="col"><h3 class="mt-5 mb-4">Veep</h3></div></div>
     <div class="row">
        <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid rounded shadow" src="media/images/VEEPS4E1.jpg" ><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
@@ -146,20 +146,17 @@
        <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E6.jpg"><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>  
     </div>
-  </div>
   
-  <div class="row"><div class="col"><h2 class="mt-5 mb-4">Veep</h2></div></div>
+  <div class="row"><div class="col"><h3 class="mt-5 mb-4">Code Black</h3></div></div>
     <div class="row">
        <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid rounded shadow" src="media/images/VEEPS4E1.jpg" ><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
        <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E2.jpg"><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
        <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E4b.jpg"><div class="overlay">
-       <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
-       <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E6.jpg"><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>  
     </div>
-
+    </div>
 </main>
 
 <footer class="footer mt-auto py-3">
