adding 1 px padding

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
     <div class="navbar-nav justify-content-center align-items-center">
       <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Features</a>
+      <a class="nav-item nav-link" href="newTemplate.html">New Template</a>
       <a class="nav-item nav-link" href="#">Pricing</a>
     </div>
   </div>
