modify top rows

--- a/newTemplate.html
+++ b/newTemplate.html
@@ -172,12 +172,12 @@
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
        <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E4b.jpg"><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
-       <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E6.jpg"><div class="overlay">
+       <!-- <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E6.jpg"><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
        <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E1.jpg" ><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
        <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E2.jpg"><div class="overlay">
-       <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
+       <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div> -->
     </div>
     <div class="row">
        <div class="imageContainer"><img class="img-fluid" src="media/images/VEEPS4E4b.jpg"><div class="overlay">
