--- a/newTemplate.html
+++ b/newTemplate.html
@@ -26,7 +26,7 @@
             margin-bottom: 0;
         }
         
-        .col-sm-6, .col-md-4 {
+        .col-sm-6, .col-sm-4, .col-md-4 {
             padding-left: 0;
             padding-right: 0;
         }
@@ -166,11 +166,11 @@
 </div> <!-- end of video modal> -->
   
     <div class="row">
-       <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E1.jpg" ><div class="overlay">
+       <div class="col-sm-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E1.jpg" ><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
-       <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E2.jpg"><div class="overlay">
+       <div class="col-sm-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E2.jpg"><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
-       <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E4b.jpg"><div class="overlay">
+       <div class="col-sm-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E4b.jpg"><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
        <!-- <div class="col-sm-6 col-md-4 imageContainer"><img class="img-fluid" src="media/images/VEEPS4E6.jpg"><div class="overlay">
        <i class="icon video-btn fa fa-youtube-play fa-3x" data-toggle="modal" data-src="https://player.vimeo.com/video/314899599" data-target="#myModal"></i></div></div>
