--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Spener Combs</title>
+    <title>Spencer Combs</title>
     
     <style>
         body, h1, h2, h3, h4, h5, h6, p, .blog-header-logo {
@@ -108,12 +108,12 @@
   </head>
   <body class="d-flex flex-column h-100">
       <div class="container">
-          <header class="blog-header  mb-2">
+          <header class="blog-header mb-2">
                 <div class="row flex-nowrap justify-content-center">
                 <a class="blog-header-logo text-dark" href="#">SPENCER COMBS</a>
                 </div>
           </header>
- 
+
          <nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color:#fff;">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
