mobile nav update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
             margin: 0 .5rem;
             color: rgba(0,0,0,.7);
             font-weight: 300;
+            font-size: .9rem;
             border-bottom: 1px solid transparent;
+        }
+        
+        @media (min-width: 400px) {
+            nav a {
+                font-size: .95rem;
+            }
         }
         
         nav a:hover {
