--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         header {
             line-height: 1.3;
             font-weight: 300;
-            border-bottom: 1px solid #eaeaea;
         }
       
         /* .imageContainer {
@@ -128,9 +127,11 @@
   <body class="d-flex flex-column h-100">
       <div class="container-fluid px-0">
         <header class="mb-2">
-            <div class="row flex-column align-items-center">
+            <div class="row justify-content-center">
+               <div class="blog-header d-flex flex-column align-items-center">
                 <a class="blog-header-logo text-dark" href="#">SPENCER COMBS</a>
                 <p>Director of Photography</p>
+               </div>
             </div>
         </header>
 
@@ -145,10 +146,9 @@
 <!-- Begin page content -->
 
 <main role="main" class="flex-shrink-0">
-  <div class="container">
-  
+  <div class="container ">
    <div id="carouselHome" class="row">
-       <div id="forControls" class="carousel slide" data-ride="carousel">
+       <div id="forControls" class="carousel slide " data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="media/images/VEEPS4E1.jpg" class="d-block w-100" alt="veep 1">
