--- a/codeBlack.html
+++ b/codeBlack.html
@@ -53,13 +53,13 @@
                    <iframe src="https://player.vimeo.com/video/329632239"></iframe>
                </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <img class="img-fluid" src="media/images/CodeBlack305CSLuisPS.jpg" alt="Code Black 305CS">
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <img class="img-fluid" src="media/images/CodeBlack302LobbySunset.jpg" alt="Code Black Lobby Sunset">
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <img class="img-fluid" src="media/images/CodeBlack1131stKissWS.jpg" alt="Code Black 305CS">
             </div>
           
