--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
     
   <body>
-    <div id="wrapper" class="container d-flex flex-column pt-4">
+    <div id="wrapper justify-content-between" class="container d-flex flex-column pt-4">
         <div id="header" class="row flex-column justify-content-center">
            <header class="mb-2">
             <div class="row justify-content-center">
