--- a/codeBlack.html
+++ b/codeBlack.html
@@ -25,7 +25,7 @@
   </head>
     
   <body>
-    <div id="wrapper" class="container d-flex flex-column pt-4">
+    <div class="container d-flex flex-column pt-4">
         <div id="header" class="row flex-column">
            <header class="mb-2">
               <div class="row justify-content-center">
