remove padding from navigation bar for phone

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
              </div>
             </header>
 
-            <nav class="navbar justify-content-center mb-2">
+            <nav class="navbar justify-content-center mb-2 px-0">
               <a href="codeBlack.html">WORK</a>
               <a href="#">PHOTOGRAPHY</a>
               <a href="#">CONTACT</a>
