removing left and right margins

--- a/codeBlack.html
+++ b/codeBlack.html
@@ -26,10 +26,8 @@
     
   <body>
     <div class="container-fluid d-flex flex-column pt-4">
-        <div id="header" class="row flex-column flex-nowrap no-gutters">
-           <div id="header" class="row">
-              <div class="col-12">
-               <header class="mb-2">
+        <div id="header" class="row flex-column flex-nowrap">
+            <header class="mb-2">
                 <div class="d-flex justify-content-center">
                    <div class="portfolio-header d-flex flex-column align-items-center">
                     <a class="portfolio-header-logo text-dark" href="index.html">SPENCER COMBS</a>
@@ -38,15 +36,14 @@
                 </div>
             </header>
 
-            <nav class="navbar justify-content-center mb-2">
+            <nav class="navbar justify-content-center mb-2 px-0">
               <a href="codeBlack.html">WORK</a>
               <a href="#">PHOTOGRAPHY</a>
               <a href="#">CONTACT</a>
             </nav>
-         </div>
-        </div>
+        </div> <!-- end of header -->
         
-        <div id="carousel" class="row flex-row no-gutters">  <!-- row for centered main content -->  
+        <div id="carousel" class="row no-gutters">  <!-- row for centered main content -->  
             <div class="col-12 showTitle pt-3">
               <h4 class="text-center">CODE BLACK</h4>
            </div>
