--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   </head>
     
   <body>
-    <div id="homeWrapper" class="container-fluid d-flex flex-column justify-content-between justify-content-start-md pt-4">
-        <div id="header" class="row flex-column flex-nowrap">
+   
+   <!-- wrapper for pages with small amt of content -->
+    <div id="homeContainer" class="container-fluid d-flex flex-column justify-content-between justify-content-start-md pt-4">
+       <div id="header" class="row flex-column flex-nowrap">
            <header class="mb-2">
             <div class="d-flex justify-content-center">
                <div class="portfolio-header d-flex flex-column align-items-center">
