--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </header>
 
             <nav class="navbar justify-content-center mb-2 px-0">
-              <a href="codeBlack.html">WORK</a>
+              <a href="work.html">WORK</a>
               <a href="#">PHOTOGRAPHY</a>
               <a href="#">CONTACT</a>
             </nav>
