loading remaining images

--- a/veep.html
+++ b/veep.html
@@ -59,10 +59,10 @@
                 <img class="img-fluid" src="media/images/Veep404Airport.jpg" alt="Veep Airport">
             </div>
             <div class="col-md-4">
-                <img class="img-fluid" src="media/images" alt="">
+                <img class="img-fluid" src="media/images/VeepS4E2GaryPainting.jpg" alt="Veep Gary Painting">
             </div>
             <div class="col-md-4">
-                <img class="img-fluid" src="media/images" alt="">
+                <img class="img-fluid" src="media/images/VeepS4E5HughEntrance.jpg" alt="Veep Hugh Entrance">
             </div>
         </div>
        
