--- a/codeBlack2.html
+++ b/codeBlack2.html
@@ -80,7 +80,7 @@
     <script>
       
      var host = 'https://shreecheryl.github.io/SpencerTest';
-var pages = [host + '/codeBlack.html', host + '/codeBlack2.html', host + '/sonsOfAnarchy.html'];
+var pages = [host + '/powerCouple.html', host + '/codeBlack2.html', host + '/sonsOfAnarchy.html'];
 console.log(host);
 
 var behind = document.getElementById('prev');
