ready for review

--- a/codeBlackOrig.html
+++ b/codeBlackOrig.html
@@ -36,10 +36,8 @@
         </div> <!-- end of header -->
         
         <div class="row no-gutters">  <!-- row for centered main content -->  
-            <div class="col-12 d-flex justify-content-between showTitle pt-3">
-                <button id="prev" type="button" class="btn">&larr; prev</button>
-                <h4 class="text-center">CODE BLACK </h4>
-                <button id="next" type="button" class="btn">next &rarr;</button>
+            <div class="col-12 showTitle pt-3">
+              <h4 class="text-center">CODE BLACK</h4>
            </div>
             <div class="col-12">
                <div class="embed-responsive embed-responsive-16by9">
@@ -77,7 +75,4 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
-    <script src="js/script.js"></script>
-
   </body>
