logo resize for xsmall

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         </div>
         
         <div class="row">
-               <div class="text-center col-6 offset-3 col-sm-4 offset-sm-2 col-md-3 offset-md-3" >
+               <div class="col-4 offset-4 col-sm-4 offset-sm-2 col-md-3 offset-md-3" >
                    <img class="img-fluid mb-4" src="media/images/wme936x297.png" alt="WME logo">
                </div>  
                <div class="text-center text-sm-left col-sm-6">
