adjust padding on Direct on Contact page

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                 <a href="mailto:dmorris@wmeentertainment.com">dmorris@wmeentertainment.com</a><br>
                 310.859.4454</p>
 
-                <h6 class="font-weight-normal mt-5">DIRECT</h6>
+                <h6 class="font-weight-normal mt-4 mt-md-5">DIRECT</h6>
 
                 <p>Spencer Combs<br>
                 <a href="mailto:combs.spencer@gmail.com">combs.spencer@gmail.com</a><br>
